<resources>
    <!-- TODO: externalized strings -->
    <string name="app_name">Demo Intent</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="author" translatable="false">Gerry Hurdle (hurdleg)</string>
    <string name="capitalized_prompt">Capitalized Message:</string>
    <string name="capitalized_hint">Type Your Capitalized Message Here&#8230;</string>
    <string name="clear">Clear</string>
    <string name="plain_prompt">Plain Message:</string>
    <string name="plain_hint">Type Your Message Here&#8230;</string>
</resources>
